Fix: Rich text menu size on mobile

--- a/ks-component-ts/src/styles/library.css
+++ b/ks-component-ts/src/styles/library.css
@@ -1452,16 +1452,16 @@ video {
   height: 83.333333%;
 }
 
+.h-8 {
+  height: 32px;
+}
+
 .h-10 {
   height: 40px;
 }
 
 .h-80 {
   height: 320px;
-}
-
-.h-8 {
-  height: 32px;
 }
 
 .h-52 {
@@ -1628,6 +1628,10 @@ video {
   width: 83.333333%;
 }
 
+.w-8 {
+  width: 32px;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -1646,10 +1650,6 @@ video {
 
 .w-12 {
   width: 48px;
-}
-
-.w-8 {
-  width: 32px;
 }
 
 .w-120 {
@@ -3932,11 +3932,6 @@ Modified version of toast CSS to match designs
   color: rgb(39 222 191 / var(--tw-text-opacity));
 }
 
-.hover\:text-red-200:hover {
-  --tw-text-opacity: 1;
-  color: rgb(233 63 63 / var(--tw-text-opacity));
-}
-
 .hover\:text-neutral-700:hover {
   --tw-text-opacity: 1;
   color: rgb(71 90 118 / var(--tw-text-opacity));
@@ -4139,8 +4134,16 @@ input[type="checkbox"]:checked ~ .label-checked\:bg-turquoise-300 {
     display: none;
   }
 
+  .md\:h-auto {
+    height: auto;
+  }
+
   .md\:min-h-6 {
     min-height: 24px;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:min-w-20 {
